# decantCC

./: .gitignore  README.md  pyproject.toml  requirements.txt
corpus/: README.md  questions.schema.json
corpus/chart-heavy/: README.md  questions.json
corpus/chart-heavy/conversions/: .gitkeep  decant-plain.md  decant.md  docling.md  markitdown.md
corpus/clean-text/: README.md  questions.json
corpus/clean-text/conversions/: decant-plain.md  decant.md  docling.md  markitdown.md
corpus/messy-scan/: README.md  questions.json
corpus/messy-scan/conversions/: decant-plain.md  decant.md  docling.md  markitdown.md
corpus/private-novel/: README.md  questions.json
corpus/private-novel/conversions/: decant-plain.md  decant.md  docling.md  markitdown.md
corpus/public-famous/: README.md  questions.json
corpus/public-famous/conversions/: decant-plain.md  decant.md  docling.md  markitdown.md
corpus/sample-invoice/: README.md  questions.json
corpus/sample-invoice/conversions/: garbled.md
corpus/table-heavy/: README.md  questions.json
corpus/table-heavy/conversions/: decant-plain.md  decant.md  docling.md  markitdown.md
decant_eval/: __init__.py  cli.py  corpus.py  grading.py  models.py  report.py  runner.py  tokens.py
tests/: test_companions.py  test_corpus.py  test_grading.py  test_runner_ops.py  test_runner_report.py  test_tokens.py
tests/fixtures/sample-invoice/conversions/: clean.md
